feat: completar Issue #11 confirmación de venta y notificación Kafka